--- a/website/src/style/defaults.scss
+++ b/website/src/style/defaults.scss
@@ -25,13 +25,15 @@ pre {
 	@include background-color("t-neutral-100");
 }
 
-b {
+b,
+span.emphasis {
+	font-weight: bold;
 	@include color("bold-text");
 }
 
 ul {
 	list-style: none;
-	padding: 40px 0 0 0.5em;
+	padding-left: 0.5em;
 }
 
 img {
@@ -59,6 +61,10 @@ ul li {
 		position: absolute;
 		left: 0px;
 		top: 0px;
+	}
+
+	&:last-child {
+		padding-bottom: 0;
 	}
 }
 
